<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_milestones"
        android:title="@string/menu_milestones" />

    <item
        android:id="@+id/action_medicines"
        android:title="@string/menu_medicines" />

    <item
        android:id="@+id/action_export"
        android:title="@string/menu_export" />

    <item
        android:id="@+id/action_import"
        android:title="@string/menu_import" />

    <item
        android:id="@+id/action_material_you"
        android:title="@string/menu_material_you"
        app:actionLayout="@layout/menu_material_you_item" />

    <item
        android:id="@+id/action_custom_notification_sound"
        android:title="@string/menu_custom_notification_sound"
        app:actionLayout="@layout/menu_notification_sound_item" />

    <item
        android:id="@+id/action_pick_notification_sound"
        android:title="@string/menu_pick_notification_sound"
        android:visible="false"
        app:actionLayout="@layout/menu_notification_sound_picker_item" />
</menu>
