<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MedicinesActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="@string/menu_medicines" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/screen_padding"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/intro_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/section_spacing"
                    android:text="@string/medicines_intro_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicine_name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicine_name_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicine_name_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/selected_times_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:text="@string/selected_dose_times"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/schedule_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:chipSpacingHorizontal="8dp"
                    app:chipSpacingVertical="8dp" />

                <TextView
                    android:id="@+id/schedule_error_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="?attr/colorError"
                    android:visibility="gone"
                    tools:text="Pick at least one dose time."
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_dose_time_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:text="@string/add_dose_time" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_medicine_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:text="@string/add_medicine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:text="@string/your_medicines"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/empty_state_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:text="@string/medicines_empty_state"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/medicine_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_spacing"
                    tools:listitem="@layout/item_medicine" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/main_drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
